# tonic-keycloak-auth

./: Cargo.toml  README.md
integration-tests/: Cargo.toml  build.rs
integration-tests/proto/: whoami.proto
integration-tests/tests/: integration_test.rs
integration-tests/tests/backend/: mod.rs
integration-tests/tests/common/: service.rs  tracing.rs
src/: action.rs  decode.rs  error.rs  extract.rs  interceptor.rs  lib.rs  role.rs
