[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
assertr = "0.3.1"
http = "1.3.1"
keycloak = "26.2.300"
prost = "0.13.1"
reqwest = { version = "0.12.20", features = ["rustls-tls"] }
testcontainers = "0.24.0"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.13.1"
tonic-keycloak-auth = { path = "./../" }
tonic-middleware = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
